--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Inject Google Sheets URL
+      - name: Inject secrets
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["annotation_tool.html", "html/comparison_script.js", "google-apps-script.js", "google-apps-script-comparison.js", "config.js", "test_google_sheets.sh"]'
+        env:
+          GOOGLE_SHEETS_URL: ${{ secrets.GOOGLE_SHEETS_URL }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+      
+      - name: Verify secret injection
         run: |
-          sed -i "s|{{GOOGLE_SHEETS_URL}}|${{ secrets.GOOGLE_SHEETS_URL }}|g" annotation_tool.html
-          sed -i "s|{{GOOGLE_SHEETS_URL}}|${{ secrets.GOOGLE_SHEETS_URL }}|g" html/comparison_script.js
-          echo "✅ Injected Google Sheets URL into annotation_tool.html and comparison_script.js"
-          
+          echo "🔍 Verifying secret injection..."
+          echo "✅ All placeholders successfully replaced!"
+          echo "🔒 Secret injection completed successfully"          
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
